# hikvision-tftpd

./: .pre-commit-config.yaml  README.md  hikvision_tftpd.py  hikvision_tftpd_test.py  pyproject.toml
.github/workflows/: test.yml
